Attempting to deconstruct template

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,11 +20,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap" rel="stylesheet">
     <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto&family=Saira+Stencil+One&text=Nafie&display=swap">
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto&family=Saira+Stencil+One&text=Jesse&display=swap">
+    <link rel="stylesheet" href="src/styles/main.css">
   </head>
   <body>
     <!-- quasar:entry-point -->
     <!-- js plugins file -->
     <script src="src/scripts/plugins.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.js"></script>
   </body>
 </html>
