--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,6 @@
   <body>
     <!-- quasar:entry-point -->
     <!-- js plugins file -->
-    <script src="src/scripts/plugins.min.js"></script>
+    <!-- <script src="src/scripts/plugins.min.js"></script> -->
   </body>
 </html>
